syntax = "proto3";

option csharp_namespace = "Padel.Proto.User.V1";

option go_package = "gateway/userbp";

package user.v1;

service UserService {
  rpc Me (MeRequest) returns (MeResponse) {
  }
}

message Me {
  string username = 1;
  string name = 2;
  string email = 3;
}

message MeRequest {

}

message MeResponse {
  Me me = 1;
}
